# thrift-ls

./: Cargo.toml  LICENSE  README.md
editors/code/: .gitignore  .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
editors/code/src/: extension.ts  main.ts  server.ts  utils.ts
editors/code/syntaxes/: thrift.tmLanguage.json
lib/: analyzer.rs  ast.rs  lsp.rs  macros.rs  mod.rs  parser.rs  scanner.rs  token.rs  wasm.rs
lib/analyzer/: ast.rs  base.rs  macros.rs  mod.rs  parser.rs  scanner.rs  symbol.rs  token.rs
lib/analyzer/test_file/: InvalidThriftTest.thrift  ThriftTest.thrift
lib/test_file/: base.thrift  common.thrift  user.thrift
src/: logger.rs  main.rs  server.rs
src/server/: io.rs  lsp.rs  mod.rs  rw.rs  textdocument.rs
