[package]
name = "thrift-ls"
version = "0.1.0"
authors = ["ocfbnj"]
edition = "2021"
description = "A language server for Thrift."
readme = "README.md"
repository = "https://github.com/ocfbnj/thrift-ls"
license = "MIT"
keywords = ["thrift", "language-server"]

[lib]
name = "thrift_ls"
path = "lib/mod.rs"

[[bin]]
name = "thrift-ls"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simple_logger = "4.3"
chrono = "0.4"
dirs = "5.0"
tokio = { version = "1.44.1", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "io-std",
    "io-util",
] }
bytes = { version = "1", features = ["serde"] }
url = "2.5.4"
