[package]
name = "thrift-ls"
version = "0.1.3"
authors = ["ocfbnj"]
edition = "2021"
description = "A language server for Thrift."
readme = "README.md"
repository = "https://github.com/ocfbnj/thrift-ls"
license = "MIT"
keywords = ["thrift", "language-server"]

[lib]
name = "thrift_analyzer"
path = "lib/mod.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "thrift-ls"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
log = "0.4"
simple_logger = "4.3"
chrono = "0.4"
dirs = "5.0"
bytes = { version = "1", features = ["serde"] }
url = "2.5.4"
tokio = { version = "1.44.1", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "io-std",
    "io-util",
    "sync",
] }
